# hyasynth-engine

./: ARCHITECTURE.md  COMMAND_PROCESSING.md  Cargo.toml  README.md  build.sh
Hyasynth.xcframework/: Info.plist
Hyasynth.xcframework/ios-arm64-simulator/Headers/: hyasynth.h
Hyasynth.xcframework/ios-arm64/Headers/: hyasynth.h  module.modulemap
include/: hyasynth.h  module.modulemap
src/: README.md  audio_buffer.rs  bridge.rs  clip_playback.rs  compile.rs  engine.rs  engine_controller.rs  event.rs  execution_plan.rs  ffi.rs  graph.rs  lib.rs  main.rs  modulation.rs  node.rs  node_factory.rs  parameter.rs  plan_handoff.rs  scheduler.rs  temp  test.rs  transport.rs  voice.rs  voice_allocator.rs  wasm.rs
src/nodes/: audio_player.rs  effects.rs  envelope.rs  filters.rs  mod.rs  mod_sine.rs  modulation.rs  oscillators.rs  sine.rs  utility.rs
src/state/: arrangement.rs  clip.rs  command.rs  graph_def.rs  mod.rs  param_info.rs  runtime_graph.rs  session.rs
swift/: HyaSynth.swift
